# my-chat-console

./: -remote origin main  .editorconfig  .env  .gitignore  ADMIN_USER_SETUP.md  AI_MISSION_PLANNING_README.md  CONTRIBUTING.md  DRONE_MEDIA_INTEGRATION.md  DRONE_SYSTEM_README.md  Dockerfile.backend  Dockerfile.content-agent  Dockerfile.frontend  Dockerfile.integration  ENV_EXAMPLE.txt  IMPROVEMENTS_SUMMARY.md  MVP_SETUP_GUIDE.md  NESSA_FARM_AI_TODO.md  NESSA_TRANSFORMATION_SUMMARY.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SESSION_START.md  SOCIAL_MEDIA_SETUP.md  SUPABASE_SETUP.md  WORLD_CLASS_CONTEXT.md  agent-os-minimal.ps1  agent-os-setup-final.ps1  agent-os-setup-fixed.ps1  agent-os-setup-fixed.sh  agent-os-setup-simple-working.ps1  agent-os-setup-simple.ps1  agent-os-setup-working-final.ps1  agent-os-setup-working.ps1  agent-os-setup.ps1  auto-fix-system.bat  codebuff.json  create_test_clips.py  docker-compose.production.yml  env.example  eslint.config.js  (+35 more)
.changeset/: README.md
.git.codebuffbackup/: COMMIT_EDITMSG  config  index
ai-evals/: content_suggest.jsonl  leaf_scan.jsonl  run_eval.py  tree_count.jsonl
config/: production.env
docs/: ACCEPTANCE.md  ARCHITECTURE.md  REPO_HEALTH_REPORT.md
farm_ai_crew/: README.md  SETUP_REPORT.md  create_sample_data.py  demo_structure.py  env.example  install_agent_os.ps1  pyproject.toml  requirements.txt  requirements_ai.txt  requirements_basic.txt  requirements_full.txt  requirements_norwegian.txt  requirements_simplified.txt  run_daily_with_memory.py  run_norwegian_farm_ai.py  sample_farm_data.csv  sample_financial_data.csv  setup_agent_os.ps1  setup_clean.ps1  setup_complete_norwegian_farm_ai.py  setup_norwegian_farm_ai.ps1  setup_norwegian_farm_ai.sh  setup_norwegian_farm_ai_fixed.sh  test_crewai.py  test_norwegian_farm_ai.py
farm_ai_crew/.agent-os/agents/: subsidy_optimizer.py  tax_optimizer.py  yield_optimizer.py
farm_ai_crew/.agent-os/config/: config.yml
farm_ai_crew/.agent-os/product/: mission.md
farm_ai_crew/.agent-os/standards/: norwegian-farm-style.md  python-style.md
farm_ai_crew/.agent-os/tools/: norwegian_subsidy_calculator.py  norwegian_tax_calculator.py
farm_ai_crew/src/farm_ai_crew/: api.py  crew.py  main.py  main_coordinator.py  memory_store.py  norwegian_delegator.py  norwegian_delegator_simple.py  simple_api.py
farm_ai_crew/src/farm_ai_crew/config/: agents.yaml  norwegian_agents.yaml  tasks.yaml
farm_ai_crew/src/farm_ai_crew/coordinator/: __init__.py  app.py  dispatcher.py  logger.py  models.py  settings.py  supabase_ingest.py  ws_publisher.py
farm_ai_crew/tests/: test_coordinator_smoke.py  test_smoke.py
services/agents/drone-agent/: pyproject.toml
services/agents/drone-agent/drone_agent/: app.py  provider.py
services/agents/drone-agent/tests/: test_drone_api.py
services/ai-manager/: Dockerfile  pyproject.toml
services/ai-manager/ai_manager/: app.py  models.py  otel.py  providers.py  routes.py
services/ai-manager/tests/: test_api.py  test_contracts.py
(+199 files in other folders)
