[project]
name = "drone_agent"
version = "0.1.0"
description = "Drone Agent API (stub)"
authors = [{ name = "Farm AI", email = "dev@farm.local" }]
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "httpx>=0.27",
  "python-dotenv>=1.0.0"
]

[project.scripts]
drone_agent = "drone_agent.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
pretty = true

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings"
pythonpath = ["."]
